--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_admin_interop: 
     git: 
       url: https://github.com/m1-nann/firebase-admin-interop.git
+      ref: nann
 
 dev_dependencies:
   test: ^1.0.0
